--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "require": {
         "slim/slim": "4.*",
-        "slim/psr7": "^1.2"
+        "slim/psr7": "^1.2",
+        "slim/twig-view": "^3.1"
     }
 }
