--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,6 +3,10 @@ name: CI
 on:
   push:
     branches: [ main ]
+    tags: 
+      - 0.*
+      - 1.*
+      - 2.*
 jobs:
   deploy:
     if: contains(github.ref, 'refs/tags/')
