--- a/.github/workflows/sonnarqube.yml
+++ b/.github/workflows/sonnarqube.yml
@@ -24,5 +24,5 @@ jobs:
           -Dsonar.host.url=${{ secrets.SONAR_URL }}
           -Dsonar.login=${{ secrets.SONAR_TOKEN }}
           -Dsonar.projectKey=${{ secrets.SONAR_PROJECT_KEY }}
-          -Dsonar.branch.name=${GITHUB_REF:11}
+          -Dsonar.sources=./*
           -Dsonar.scm.provider=git
