--- a/.github/workflows/sonnarqube.yml
+++ b/.github/workflows/sonnarqube.yml
@@ -24,5 +24,5 @@ jobs:
           -Dsonar.host.url=${{ secrets.SONAR_URL }}
           -Dsonar.login=${{ secrets.SONAR_TOKEN }}
           -Dsonar.projectKey=${{ secrets.SONAR_PROJECT_KEY }}
-          -Dsonar.sources=./*
+          -Dsonar.sources=/home/runner/work/inr-indice-fragilite/inr-indice-fragilite
           -Dsonar.scm.provider=git
