--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,3 +18,5 @@ jobs:
           password: ${{ secrets.SERVER_PASSWORD }}
           scp_source: ./*
           scp_target: /var/www/inr-indice-fragilite
+          after_script: |
+            cd /var/www/inr-indice-fragilite && composer install
