--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,12 +10,7 @@ jobs:
     steps:
       - uses: actions/checkout@v1
       - name: Minify JS and CSS
-        uses: nizarmah/auto-minify@maste
-      - name: Auto committing minified files
-        uses: stefanzweifel/git-auto-commit-action@v3.0.0
-        with:
-          commit_message: "Github Action: Auto Minified JS and CSS files"
-          branch: ${{ github.ref }}
+        uses: nizarmah/auto-minify@master
       - name: SSH Server Deploy
         uses: kostya-ten/ssh-server-deploy@v3
         with:
