--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,6 +11,8 @@ jobs:
       - uses: actions/checkout@v1
       - name: Minify JS and CSS
         uses: nizarmah/auto-minify@master
+        with:
+          js-engin: uglify-js
       - name: SSH Server Deploy
         uses: kostya-ten/ssh-server-deploy@v3
         with:
