--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,18 +5,27 @@ on:
     tags: 
       - '*'
 jobs:
-  deploy:
-    runs-on: [ubuntu-latest]
-    steps:
-      - uses: actions/checkout@v1
-      - name: SSH Server Deploy
-        uses: kostya-ten/ssh-server-deploy@v3
-        with:
-          host: ${{ secrets.SERVER_HOST }}
-          port: ${{ secrets.SERVER_PORT }}
-          username: ${{ secrets.SERVER_USERNAME }}
-          password: ${{ secrets.SERVER_PASSWORD }}
-          scp_source: ./*
-          scp_target: /var/www/inr-indice-fragilite
-          after_script: |
-            cd /var/www/inr-indice-fragilite && composer install
+  runs-on: [ ubuntu-latest ]
+
+  steps:
+  - uses: actions/checkout@v1
+
+  - name: Install dependencies
+      uses: php-actions/composer@v2
+      with:
+        command: your-command-here
+
+deploy:
+  runs-on: [ubuntu-latest]
+  steps:
+  - uses: actions/checkout@v1
+
+  - name: SSH Server Deploy
+  uses: kostya-ten/ssh-server-deploy@v3
+  with:
+      host: ${{ secrets.SERVER_HOST }}
+      port: ${{ secrets.SERVER_PORT }}
+      username: ${{ secrets.SERVER_USERNAME }}
+      password: ${{ secrets.SERVER_PASSWORD }}
+      scp_source: ./*
+      scp_target: /var/www/inr-indice-fragilite
