--- a/.github/workflows/sonnarqube.yml
+++ b/.github/workflows/sonnarqube.yml
@@ -8,6 +8,17 @@ on:
     tags:
       - '*'
 jobs:
+  minify:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: Auto Minify
+        uses: nizarmah/auto-minify@master
+        with:
+          directory: 'public/assets/js'
+          output: 'main.min.js'         
+  
   build:
     runs-on: ubuntu-latest
     steps:
