--- a/.github/workflows/sonnarqube.yml
+++ b/.github/workflows/sonnarqube.yml
@@ -18,7 +18,7 @@ jobs:
         with:
           directory: 'public/assets/js'
           output: 'main.min.js'
-          sourceType: 'module'         
+          js_engine: 'uglify-js'
   
   build:
     runs-on: ubuntu-latest
