--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,6 +15,9 @@ jobs:
       - name: Install dependencies
         uses: php-actions/composer@v2
         
+      - name: Minify Action
+        uses: anthonyftwang/minify-action@v1
+        
       - name: SSH Server Deploy
         uses: kostya-ten/ssh-server-deploy@v3
         with:
