implement route type region/department

--- a/infrastructure/region/data/reg-dept-mapper.json
+++ b/infrastructure/region/data/reg-dept-mapper.json
@@ -95,6 +95,7 @@
   {"codeRegion": 11,  "codeDepartement": 93},
   {"codeRegion": 11,  "codeDepartement": 94},
   {"codeRegion": 11,  "codeDepartement": 95},
+  {"codeRegion": 20,  "codeDepartement": 94},
   {"codeRegion": 2,  "codeDepartement": 972},
   {"codeRegion": 4,  "codeDepartement": 974}
 ]
