--- a/infrastructure/region/data/reg-dept-mapper.json
+++ b/infrastructure/region/data/reg-dept-mapper.json
@@ -1,13 +1,13 @@
 [
-  {"codeRegion": 84,  "codeDepartement": 1},
-  {"codeRegion": 32,  "codeDepartement": 2},
-  {"codeRegion": 84,  "codeDepartement": 3},
-  {"codeRegion": 93,  "codeDepartement": 4},
-  {"codeRegion": 93,  "codeDepartement": 5},
-  {"codeRegion": 93,  "codeDepartement": 6},
-  {"codeRegion": 84,  "codeDepartement": 7},
-  {"codeRegion": 44,  "codeDepartement": 8},
-  {"codeRegion": 76,  "codeDepartement": 9},
+  {"codeRegion": 84,  "codeDepartement": "01"},
+  {"codeRegion": 32,  "codeDepartement": "02"},
+  {"codeRegion": 84,  "codeDepartement": "03"},
+  {"codeRegion": 93,  "codeDepartement": "04"},
+  {"codeRegion": 93,  "codeDepartement": "05"},
+  {"codeRegion": 93,  "codeDepartement": "06"},
+  {"codeRegion": 84,  "codeDepartement": "07"},
+  {"codeRegion": 44,  "codeDepartement": "08"},
+  {"codeRegion": 76,  "codeDepartement": "09"},
   {"codeRegion": 44,  "codeDepartement": 10},
   {"codeRegion": 76,  "codeDepartement": 11},
   {"codeRegion": 76,  "codeDepartement": 12},
